# xmlhtml

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README  README.md  haddock.sh  runTestsAndCoverage.sh  shell.nix  xmlhtml.cabal
.github/workflows/: ci.yml  haskell-ci.yml
src/Text/: XmlHtml.hs
src/Text/Blaze/Renderer/: XmlHtml.hs
src/Text/XmlHtml/: Common.hs  Cursor.hs  TextParser.hs
src/Text/XmlHtml/HTML/: Meta.hs  Parse.hs  Render.hs
src/Text/XmlHtml/XML/: Parse.hs  Render.hs
test/: runTestsAndCoverage.sh  xmlhtml-testsuite.cabal
test/benchmark/: Benchmark.hs  BlazeExample.hs
test/resources/benchmarks/: haddock-example.html
test/resources/ibm/invalid/P32/: ibm32i02.xml.incorrect
test/resources/ibm/not-wf/P01/: ibm01n01.xml.correct
test/resources/ibm/not-wf/P10/: ibm10n05.xml.html.correct
test/resources/ibm/not-wf/P14/: ibm14n01.xml.correct  ibm14n03.xml.html.correct
test/resources/ibm/not-wf/P16/: ibm16n01.xml.correct
test/resources/ibm/not-wf/P28/: ibm28n05.xml.html.correct
test/resources/ibm/not-wf/P30/: ibm30n01.xml.correct  ibm30n01.xml.result
test/resources/ibm/not-wf/P31/: ibm31n01.xml.result
test/resources/ibm/not-wf/P39/: ibm39n06.xml.correct
test/resources/ibm/not-wf/P41/: ibm41n05.xml.html.correct  ibm41n10.xml.html.correct
test/resources/ibm/not-wf/P61/: ibm61n01.xml.result
test/resources/ibm/not-wf/P62/: ibm62n05.xml.correct
test/resources/ibm/not-wf/P66/: ibm66n01.xml.correct  ibm66n10.xml.html.correct
test/resources/ibm/not-wf/P68/: ibm68n07.xml.correct
test/resources/ibm/not-wf/P75/: ibm75n03.xml.html.correct  ibm75n06.xml.correct
test/resources/ibm/valid/P02/: ibm02v01.xml.incorrect
test/resources/ibm/valid/P32/: ibm32v02.xml.incorrect
test/resources/oasis/: p01fail3.xml.correct  p10fail2.xml.html.correct  p14fail2.xml.html.correct  p14fail3.xml.correct  p18fail3.xml.correct  p27fail1.xml.correct  p28fail1.xml.correct  p41fail1.xml.html.correct  p41fail2.xml.html.correct  p43pass1.xml.xml.incorrect  p44fail3.xml.html.correct  p49pass1.xml  p68fail3.xml.html.correct  p68pass1.xml.incorrect
test/src/: TestSuite.hs
test/src/Text/XmlHtml/: CursorTests.hs  DocumentTests.hs  OASISTest.hs  TestCommon.hs  Tests.hs
test/suite/Text/XmlHtml/: CursorTests.hs  DocumentTests.hs  OASISTest.hs  TestCommon.hs  Tests.hs
tests/Text/XmlHtml/: Tests.hs
