Name:                xmlhtml
Version:             0.1
Synopsis:            XML parser and renderer with HTML 5 quirks mode
Description:         Contains renderers and parsers for both XML and HTML 5
                     document fragments, which share data structures wo that
                     it's easy to work with both.  Document fragments are bits
                     of documents, which are not constrained by some of the
                     high-level structure rules (in particular, they may
                     contain more than one root element).
                     .
                     Note that this is not a compliant HTML 5 parser.  Rather,
                     it is a parser for HTML 5 compliant documents.  It does not
                     implement the HTML 5 parsing algorithm, and should
                     generally be expected to perform correctly only on
                     documents that you trust to conform to HTML 5.  This is
                     not a suitable library for implementing web crawlers or
                     other software that will be exposed to documents from
                     outside sources.  The result is also not the HTML 5
                     node structure, but rather something closer to the physical
                     structure.  For example, omitted start tags are not
                     inserted (and so, their corresponding end tags must also be
                     omitted).
License:             BSD3
License-file:        LICENSE
Author:              Chris Smith <cdsmith@gmail.com>
Maintainer:          Chris Smith <cdsmith@gmail.com>
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6

Flag test
  Description: Whether to build the unit tests
  Default: False

Library
  Hs-source-dirs:      src
  Exposed-modules:     Text.XmlHtml,
                       Text.XmlHtml.Cursor
  Other-modules:       Text.XmlHtml.Common,
                       Text.XmlHtml.XML.Parse,
                       Text.XmlHtml.XML.Render,
                       Text.XmlHtml.HTML.Meta,
                       Text.XmlHtml.HTML.Parse,
                       Text.XmlHtml.HTML.Render
  Build-depends:       base == 4.*,
                       containers == 0.3.*,
                       attoparsec >= 0.8.3 && < 0.9,
                       attoparsec-text == 0.8.*,
                       text >= 0.10 && < 0.12,
                       bytestring == 0.9.*,
                       blaze-builder == 0.2.1.*
  if flag(test)
    Hs-source-dirs:    tests
    Other-modules:     Text.XmlHtml.Tests
    Build-depends:     QuickCheck >= 2.0 && < 2.5

  Ghc-options:         -Wall -fwarn-tabs
