Name:                xmlhtml
Version:             0.1
Synopsis:            XML parser and renderer with HTML 5 quirks mode
Description:         Contains renderers and parsers for both XML and HTML 5
                     document fragments, which share data structures wo that
                     it's easy to work with both.  Document fragments are bits
                     of documents, which are not constrained by some of the
                     high-level structure rules (in particular, they may
                     contain more than one root element).
                     .
                     Note that this is not a compliant HTML 5 parser.  Rather,
                     it is a parser for HTML 5 compliant documents.  It does not
                     implement the HTML 5 parsing algorithm, and should
                     generally be expected to perform correctly only on
                     documents that you trust to conform to HTML 5.  This is
                     not a suitable library for implementing web crawlers or
                     other software that will be exposed to documents from
                     outside sources.  The result is also not the HTML 5
                     node structure, but rather something closer to the physical
                     structure.  For example, omitted start tags are not
                     inserted (and so, their corresponding end tags must also be
                     omitted).
License:             BSD3
License-file:        LICENSE
Author:              Chris Smith <cdsmith@gmail.com>
Maintainer:          Chris Smith <cdsmith@gmail.com>
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6

Library
  Hs-source-dirs:      src
  Exposed-modules:     Text.XmlHtml,
                       Text.XmlHtml.Cursor,
                       Text.Blaze.Renderer.XmlHtml
  Other-modules:       Text.XmlHtml.Common,
                       Text.XmlHtml.TextParser,
                       Text.XmlHtml.XML.Parse,
                       Text.XmlHtml.XML.Render,
                       Text.XmlHtml.HTML.Meta,
                       Text.XmlHtml.HTML.Parse,
                       Text.XmlHtml.HTML.Render
  Build-depends:       base == 4.*,
                       blaze-builder == 0.2.*,
                       blaze-html == 0.3.*,
                       bytestring == 0.9.*,
                       containers >= 0.3 && <0.5,
                       parsec >= 3.0 && < 3.2,
                       text >= 0.11 && < 0.12

  Ghc-options:         -Wall -fwarn-tabs
